--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -3,6 +3,71 @@
 {% block title %}Nos Produits{% endblock %}
 
 {% block body %}
+<style>
+  body.dark-mode .item {
+    background-color: #1e1e2a !important;
+    color: #ffffff;
+    border-radius: 12px;
+    padding: 20px;
+  }
+  
+  body.dark-mode .item h4 a,
+  body.dark-mode .item h6,
+  body.dark-mode .item ul li,
+  body.dark-mode .item .category {
+    color: #ffffff;
+  }
+  
+  body.dark-mode .item ul li span {
+    color: #cccccc;
+  }
+  
+  body.dark-mode .card-img-top {
+    filter: none !important;
+    opacity: 1 !important;
+  }
+  
+  body.dark-mode .modal-content {
+    background-color: #2c2c3e;
+    color: #ffffff;
+  }
+  
+  body.dark-mode .form-control,
+  body.dark-mode .form-select {
+    background-color: #1e1e2a;
+    color: #ffffff;
+    border: 1px solid #444;
+  }
+  
+  body.dark-mode .btn-outline-dark {
+    border-color: #f35525;
+    color: #f35525;
+  }
+  
+  body.dark-mode .btn-outline-dark:hover {
+    background-color: #f35525;
+    color: white;
+  }
+  
+  body.dark-mode .btn-warning {
+    background-color: #f39c12;
+    border-color: #f39c12;
+    color: white;
+  }
+  
+  body.dark-mode .btn-warning:hover {
+    background-color: #e67e22;
+    border-color: #e67e22;
+  }
+
+  body.dark-mode input,
+body.dark-mode textarea,
+body.dark-mode select {
+  background-color: #fff !important;
+  color: #000 !important;
+  border: 1px solid #ccc !important;
+}
+</style>
 <div class="page-heading header-text">
   <div class="container">
     <div class="row">
