qr code now implements google maps/prix textfield is disabled in billet

--- a/templates/billet/front_reservation.html.twig
+++ b/templates/billet/front_reservation.html.twig
@@ -21,6 +21,7 @@
           'attr': {
             'readonly': true,
             'id': 'billet_prix',
+            'disabled': 'disabled',
             'class': 'form-control'
           }
         }) }}
