--- a/templates/billet/index.html.twig
+++ b/templates/billet/index.html.twig
@@ -72,6 +72,9 @@
         Billets enregistrés
         <input type="text" id="billetSearch" class="form-control w-25" placeholder="Rechercher un billet...">
       </div>
+      <a href="{{ path('export_billets_excel') }}" class="btn btn-outline-success">
+        📥 Export Excel
+      </a>
       <div class="table-responsive">
         <table class="align-middle mb-0 table table-striped table-hover">
           <thead>
